# hle_audio

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  curve.cpp
common/include/internal/: memory_utils.inl
data_layer/: CMakeLists.txt
data_layer/include/: data_state.h  data_types.h  file_data_provider.h  index_id.h  sparse_vector.h
data_layer/src/: data_keys.h  data_state.cpp  data_state_funcs.cpp  data_state_json.cpp  data_state_rt_blob.cpp  data_state_v1.cpp  data_state_v1.h  data_state_v2.cpp  data_state_v2.h  data_state_v2_types.h  file_data_provider.cpp  index_id.cpp  json_utils.inl
editor/: CMakeLists.txt  editor.rc
editor/libs/imgui/: CMakeLists.txt
editor/libs/imgui/include/: imgui_ext.h  imnodes.h
editor/libs/imgui/src/: imgui.cpp  imgui_etx.cpp  imnodes.cpp  imnodes_internal.h
editor/logic/: CMakeLists.txt
editor/logic/include/: app_logic.h  cmd_stack.h  cmd_types.h
editor/logic/src/: app_logic.cpp  cmd_stack.cpp  commands.cpp  commands.h
editor/logic/tests/: CMakeLists.txt  test_state.cpp
editor/src/: app_state.cpp  app_state.h  app_view.cpp  app_view.h  attribute_id_utils.inl  imgui_utils.inl  main.cpp  nodes_view.cpp  nodes_view.h
fbs_types/: CMakeLists.txt  sound_data_types.fbs
rt_libs/: CMakeLists.txt  ma_impl.m  miniaudio_public.h
rt_types/: rt_types.h
runtime/: CMakeLists.txt
runtime/include/: alloc_types.h  hlea_runtime.h
runtime/include/editor/: editor_runtime.h
runtime/include/hlea/: alloc_types.h  file_types.h  jobs_types.h  runtime.h
runtime/src/: alloc_utils.inl  allocator_bridge.inl  async_file_reader.cpp  async_file_reader.h  buffer_data_source.cpp  buffer_data_source.h  chunk_streaming_cache.cpp  chunk_streaming_cache.h  chunked_stack_allocator.inl  data_source_utils.inl  decoder.h  decoder_mp3.cpp  decoder_mp3.h  decoder_pcm.cpp  default_allocator.cpp  default_allocator.h  editor_runtime.cpp  file_api_vfs_bridge.cpp  file_api_vfs_bridge.h  file_utils.inl  hash_indices.inl  hash_utils.inl  hlea_runtime.cpp  index_list.inl  internal_alloc_types.h  internal_editor_runtime.h  internal_jobs_types.h  internal_types.h  jobs_utils.inl  ma_impl.c  miniaudio.h  node_state_stack.cpp  node_state_stack.h  push_decoder_data_source.cpp  push_decoder_data_source.h  runtime.cpp  runtime_groups.cpp  streaming_data_source.cpp  streaming_data_source.h  tracking_allocator.cpp  (+1 more)
runtime/src/data_sources/: streaming_data_source.cpp
runtime/src/decoders/: decoder_mp3.cpp  decoder_mp3.h  decoder_pcm.cpp  decoder_pcm.h
runtime/src/nodes/: fade_node.cpp  fade_node.h
tool/: CMakeLists.txt  main.cpp
tool_rt/: CMakeLists.txt  file_data_provider.cpp  file_data_provider.h
